# txdemo

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: check-rs.yml  ci.yml
benches/: generated.rs
src/: account_service.rs  cli.rs  core.rs  csv.rs  fixed_decimal.rs  lib.rs  main.rs
src/account/: mem.rs
src/core/: fixed_decimal.rs  mod.rs
test-resources/available-overflow/: expected.csv  input.csv
test-resources/chargeback-overflow-err/: expected.csv  input.csv
test-resources/chargeback-overflow-retry/: expected.csv  input.csv
test-resources/chargeback-rejected-tx/: expected.csv  input.csv
test-resources/chargeback-valid-tx/: input.csv
test-resources/depose-then-withdraw/: expected.csv  input.csv
test-resources/dispute-already-disputed/: input.csv
test-resources/dispute-already-rejected/: input.csv
test-resources/dispute-deposit-exact-match/: expected.csv  input.csv
test-resources/dispute-deposit-exact-match-and-chargeback/: input.csv
test-resources/dispute-deposit-exact-match-and-resolve/: input.csv
test-resources/dispute-deposit-insufficient-assets/: input.csv
test-resources/dispute-deposit-insufficient-assets-but-chargeback/: input.csv
test-resources/dispute-deposit-insufficient-assets-but-resolve/: input.csv
test-resources/dispute-deposit-ok/: expected.csv  input.csv
test-resources/dispute-deposit-ok-and-chargeback/: input.csv
test-resources/dispute-deposit-ok-and-resolve/: input.csv
test-resources/dispute-withdrawal-denied-by-policy/: flags.txt
txgenerator/: Cargo.toml  README.md
(+37 files in other folders)
